delete: delete .zip file

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 
 .env
+*.zip
 
 .vscode/
 mariadb/
@@ -7,4 +8,5 @@ moodle/
 moodle_data/
 __pycache__/
 /**/__pycache__/
+/**/*.zip
 vpldatascience/assets/
